Добавлены юнит тесты для всех сервисов Обновил pom.xml добавив зависимости тестов и конфигурацию surefire.